<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".Fragments.InformationFragment">

    <LinearLayout
        android:id="@+id/view_person_insertion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_layout_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/semi_fab_margin"
            android:layout_marginTop="@dimen/semi_fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/editetxt_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:inputType="text|textAutoCorrect|textShortMessage|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout_email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/semi_fab_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/editetxt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout_telephone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/semi_fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/editetxt_telephone"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:hint="@string/téléphone"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/semi_fab_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/editetxt_age"
                    android:layout_width="wrap_content"
                    android:minWidth="100dp"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:alpha=".7"
                android:text="@string/sexe"/>

            <RadioGroup
                android:id="@+id/radiogroup_genre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiobutton_homme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:alpha=".8"
                    android:text="@string/homme"/>

                <RadioButton
                    android:id="@+id/radiobutton_femme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:alpha=".8"
                    android:text="@string/femme"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout_localisation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/editetxt_localisation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Localisation"
                    android:inputType="text|textAutoCorrect|textShortMessage|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/button_locate_automatically"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round_background"
                android:padding="@dimen/semi_fab_margin"
                android:src="@drawable/ic_round_location_on_24"
                android:tint="@color/blue"
                android:alpha=".8"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/dropdown_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/semi_fab_margin"
            android:src="@drawable/ic_baseline_arrow_drop_up_24"
            android:tint="@color/blue"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_round_background"
            android:layout_marginBottom="@dimen/semi_fab_margin"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_person"
        tools:itemCount="5"
        app:layout_constraintTop_toBottomOf="@id/view_person_insertion"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_round_add_24"
        app:tint = "@android:color/white"
        app:borderWidth="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>